# rust-openai-lib

./: .gitignore  Cargo.toml
examples/: chat.rs
src/: chat.rs  config.rs  error.rs  lib.rs  types.rs
