[package]
name = "rust-openai-lib"
description = "Experimenting with OpenAI Api"
version = "0.1.0"
edition = "2021"
authors = ["Francesco Costantino <mac-3>"]

[dev-dependencies]
env_logger = "0.10.0"

[dependencies]
log = "0.4.17"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
